[package]
name = "tylog"
version = "0.1.0"
authors = ["Tyler Ruckinger <t.ruckinger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.11", features = ["std"] }
time = "0.2.16"
fxhash = "0.2.1"
# lazy_static = "1.4.0"
nom = "5.1.2"
